[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Objects/Sem Fundo.png" type="Texture" id=1]
[ext_resource path="res://Scripts/GameBasics/Goal.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/LevelComplete.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 6 )

[node name="Goal" type="Node"]
script = ExtResource( 2 )
goalNumber = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 24 )
texture = ExtResource( 1 )
hframes = 20
vframes = 10
frame = 176

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 4 )

[node name="LevelComplete" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D" to="." method="_on_Area2D_body_exited"]
